--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,1 @@
-torch
-langchain
-chainlit
-chromadb
-python-dotenv
-transformers
-sentence_transformers
-unstructured
-ctransformers
-Markdown
-pypdf
+pandasai
